# lakeshore-nomad-plugin

./: README.md  pyproject.toml
src/lakeshore-nomad-plugin/hall/: __init__.py
src/lakeshore-nomad-plugin/hall/instrument_parser/: __init__.py  parser.py
src/lakeshore-nomad-plugin/hall/measurement_parser/: __init__.py  parser.py
src/lakeshore_nomad_plugin/hall/: __init__.py  instrument.py  measurement.py  new_reader.py  reader.py  schema.py  utils.py
src/lakeshore_nomad_plugin/hall/instrument_parser/: __init__.py  parser.py
src/lakeshore_nomad_plugin/hall/measurement_parser/: __init__.py  parser.py
tests/: test_parsing.py
tests/data/hall/: test.txt
